// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `[Function]`;

exports[`TESTING TextInput Component GIVEN a TextInput component with variant and isError prop WHEN the TextInput Component has isError set to true THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative w-full group transition-colors bg-inherit border-b border-opacity-20 hover:border-opacity-50 border-red-500"
    data-testid="text-input-container"
  >
    <label
      class="absolute left-3 top-0 transition duration-200 pointer-events-none font-medium text-sm text-new-highlight scale-0 opacity-0"
      data-testid="text-input-label"
      for="testing"
    >
      testing
    </label>
    <div
      class="absolute bottom-2 left-2 transition duration-200 pointer-events-none text-lg text-new-highlight scale-100 opacity-100"
    >
      testing
    </div>
    <input
      class="w-full px-3 pt-6 pb-2 bg-inherit focus:outline-none transition-opacity text-new-white opacity-0"
      data-testid="text-input-input"
      id="testing"
      name="testing"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TESTING TextInput Component GIVEN a TextInput component with variant and isError prop WHEN the TextInput Component is rendered THEN it should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="relative w-full group transition-colors bg-inherit border-b border-opacity-20 hover:border-opacity-50 border-new-highlight text-new-white placeholder-new-highlight"
    data-testid="text-input-container"
  >
    <label
      class="absolute left-3 top-0 transition duration-200 pointer-events-none font-medium text-sm text-new-highlight scale-0 opacity-0"
      data-testid="text-input-label"
      for="testing"
    >
      testing
    </label>
    <div
      class="absolute bottom-2 left-2 transition duration-200 pointer-events-none text-lg text-new-highlight scale-100 opacity-100"
    >
      testing
    </div>
    <input
      class="w-full px-3 pt-6 pb-2 bg-inherit focus:outline-none transition-opacity text-new-white opacity-0"
      data-testid="text-input-input"
      id="testing"
      name="testing"
      value=""
    />
  </div>
</DocumentFragment>
`;
